--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/Metatronius/q2-wk2-monday-warmup.git"
+    "url": "https://github.com/Metatronius/q2-wk2-monday-warmup.git"
   },
   "keywords": [
     "warmup"
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/Metatronius/q2-wk2-monday-warmup/issues"
   },
-  "homepage": "https://github.com/Metatronius/q2-wk2-monday-warmup#readme"
+  "homepage": "https://github.com/Metatronius/q2-wk2-monday-warmup#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
